refactor(general): rename project to atlas (#23)
### Pull Request Prelude
- [x] I have followed [proper The Forgotten Server code styling][code].
- [x] I have read and understood the [contribution guidelines][cont]
before making this PR.
- [x] I am aware that this PR may be closed if the above-mentioned
criteria are not fulfilled.

### Changes Proposed
Rename project to atlas.

[cont]: https://github.com/otland/forgottenserver/wiki/Contributing
[code]:
https://github.com/otland/forgottenserver/wiki/TFS-Coding-Style-Guide

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 MYSQL_HOST=127.0.0.1
-MYSQL_USER=forgottenserver
+MYSQL_USER=atlas
 MYSQL_PASSWORD=
-MYSQL_DATABASE=forgottenserver
+MYSQL_DATABASE=atlas
 MYSQL_SOCK=
 MYSQL_PORT=
