--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,9 @@ jobs:
         image: mariadb
 
         env:
-          MARIADB_USER: forgottenserver
-          MARIADB_PASSWORD: forgottenserver
-          MARIADB_DATABASE: forgottenserver
+          MARIADB_USER: atlas
+          MARIADB_PASSWORD: atlas
+          MARIADB_DATABASE: atlas
           MARIADB_INITDB_SKIP_TZINFO: "yes"
           MARIADB_RANDOM_ROOT_PASSWORD: "yes"
 
@@ -44,7 +44,7 @@ jobs:
         run: |
           sudo apt update -qq
           sudo apt install -yqq mariadb-client
-          mysql -h 0.0.0.0 -u forgottenserver -pforgottenserver forgottenserver < schema.sql
+          mysql -h 0.0.0.0 -u atlas -patlas atlas < schema.sql
 
       - name: Build with CMake
         uses: lukka/run-cmake@v10
