build(ci): simplify workflows and adopt CMake presets (#79)
This pull request updates the build and test configuration to use newer
CMake features, simplifies the GitHub Actions workflows, and improves
consistency in artifact naming and handling. The most significant
changes are the upgrade to CMake 3.30, introduction of workflow presets,
and the removal of the build type matrix in CI workflows.

**CMake and Preset Configuration Updates:**

* Upgraded the CMake minimum required version from 3.19 to 3.30 in
`CMakeLists.txt` and updated the CMake schema and version in
`CMakePresets.json`. This enables the use of the latest CMake features
and preset schema improvements.
[[1]](diffhunk://#diff-1e7de1ae2d059d21e1dd75d5812d5a34b0222cef273b7c3a2af62eb747f9d20aL1-R1)
[[2]](diffhunk://#diff-1712b235e02bd4a3ad866fe26447a6dc5c1b449faeea513f449d244d46d03cf5L2-R8)
* Added `workflowPresets` to `CMakePresets.json`, specifically a `ci`
preset that defines the configure, build, and test steps for CI. Also
enhanced test presets to always output on failure.

**CI Workflow Simplification and Improvements:**

* Removed the build type (`Debug`, `Release`) matrix from
`.github/workflows/build-vcpkg.yml`, standardizing builds to a single
configuration, and simplified artifact naming by removing the build type
from artifact names.
[[1]](diffhunk://#diff-bb4daedeb6fca5b35dfc446be770588c42d576d9b0a1a90419696fb17baf1e01L31-L36)
[[2]](diffhunk://#diff-bb4daedeb6fca5b35dfc446be770588c42d576d9b0a1a90419696fb17baf1e01L66-R88)
* Updated artifact upload paths to use the `Debug` build directory
explicitly, improving clarity and consistency in CI outputs.
* Refactored `.github/workflows/test.yml` to use the new
`workflowPreset: ci` instead of separate configure/build/test presets,
and updated arguments for sanitizer and test configuration.

--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -28,15 +28,15 @@ on:
 
 jobs:
   build-vcpkg:
-    name: ${{ matrix.os }}-${{ matrix.buildtype }}
+    name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
-        buildtype: [Debug, Release]
 
     env:
       VCPKG_BUILD_TYPE: release
+      VCPKG_INSTALLED_DIR: ${{ github.workspace }}/vcpkg_installed
 
     steps:
       - uses: actions/checkout@v6
@@ -62,14 +62,14 @@ jobs:
       - name: Build with CMake
         uses: lukka/run-cmake@v10
         with:
-          buildPreset: vcpkg
-          buildPresetAdditionalArgs: "['--config', '${{ matrix.buildtype }}']"
           configurePreset: vcpkg
+          buildPreset: vcpkg
+          buildPresetAdditionalArgs: "['--config', 'Debug']"
 
       - name: Upload build logs
         uses: actions/upload-artifact@v6
         with:
-          name: logs-${{ matrix.os }}-${{ matrix.buildtype }}-${{ github.sha }}
+          name: logs-${{ matrix.os }}-${{ github.sha }}
           path: ${{ github.workspace }}/vcpkg/buildtrees/**/*.log
         if: ${{ failure() }}
 
@@ -77,14 +77,14 @@ jobs:
         uses: actions/upload-artifact@v6
         if: ${{ !startsWith(matrix.os, 'windows') }}
         with:
-          name: tfs-${{ matrix.os }}-${{ matrix.buildtype }}-${{ github.sha }}
-          path: ${{ github.workspace }}/build/${{ matrix.buildtype }}/tfs
+          name: tfs-${{ matrix.os }}-${{ github.sha }}
+          path: ${{ github.workspace }}/build/Debug/tfs
 
       - name: Upload artifact binary (exe)
         uses: actions/upload-artifact@v6
         if: ${{ startsWith(matrix.os, 'windows') }}
         with:
-          name: tfs-${{ matrix.os }}-${{ matrix.buildtype }}-${{ github.sha }}
+          name: tfs-${{ matrix.os }}-${{ github.sha }}
           path: |
-            ${{ github.workspace }}/build/${{ matrix.buildtype }}/tfs.exe
-            ${{ github.workspace }}/build/${{ matrix.buildtype }}/*.dll
+            ${{ github.workspace }}/build/Debug/tfs.exe
+            ${{ github.workspace }}/build/Debug/*.dll
