--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,8 @@ jobs:
 
     env:
       CXX: g++-14
+      VCPKG_BUILD_TYPE: release
+      VCPKG_INSTALLED_DIR: ${{ github.workspace }}/vcpkg_installed
 
     steps:
       - uses: actions/checkout@v6
@@ -59,9 +61,9 @@ jobs:
           ASAN_OPTIONS: exitcode=0
           LSAN_OPTIONS: exitcode=0
         with:
+          configurePreset: vcpkg
+          configurePresetAdditionalArgs: "['-DBUILD_TESTING=ON', '-DENABLE_ASAN=ON']"
           buildPreset: vcpkg
           buildPresetAdditionalArgs: "['--config', 'Debug']"
-          configurePreset: vcpkg
-          configurePresetAdditionalArgs: "['-DASAN=ON', '-DBUILD_TESTING=ON']"
           testPreset: vcpkg
-          testPresetAdditionalArgs: "['--build-config', 'Debug', '--output-on-failure']"
+          testPresetAdditionalArgs: "['--build-config', 'Debug']"
